--- a/configs/training/train_stratified_smoke/split_1_3.yaml
+++ b/configs/training/train_stratified_smoke/split_1_3.yaml
@@ -1,6 +1,6 @@
 # INITIAL SETTINGS
-train_file: train_split0_1.csv
-val_file: val_split0_1.csv
+train_file: train_split_1_3.csv
+val_file: val_split_1_3.csv
 
 # TRAINING SETTINGS
 batch_size: 10
