--- a/configs/training/train_smoke.yaml
+++ b/configs/training/train_smoke.yaml
@@ -1,10 +1,16 @@
 # INITIAL SETTINGS
-train_file: 'train_split_1_1.csv'
-val_file: 'val_split_1_1.csv'
+train_file: train_split_1_1.csv
+val_file: val_split_1_1.csv
 
 # TRAINING SETTINGS
 batch_size: 10
-num_workers: 0
-
-# SAVE, LOAD AND DISPLAY INFORMATION
+num_workers: 1
 epochs: 1
+lr: 0.003000
+weight_decay: 0.000010
+
+# VALIDATION SETTINGS
+threshold: 0.5
+
+# DEVICE CONFIGS
+device_count: 1
