updated smoke yamls

--- a/configs/predicting/predict_DBwise_smoke/split_1.yaml
+++ b/configs/predicting/predict_DBwise_smoke/split_1.yaml
@@ -1,3 +1,9 @@
 # INITIAL SETTINGS
 test_file: CPSC_CPSC-Extra.csv
 model: split_1.pth
+
+# TESTING SETTINGS
+threshold: 0.500000
+
+# DEVICE CONFIGS
+device_count: 1
