--- a/configs/predicting/predict_stratified_smoke/split_1_2.yaml
+++ b/configs/predicting/predict_stratified_smoke/split_1_2.yaml
@@ -1,3 +1,9 @@
 # INITIAL SETTINGS
 test_file: test_split_1.csv
 model: split_1_2.pth
+
+# TESTING SETTINGS
+threshold: 0.500000
+
+# DEVICE CONFIGS
+device_count: 1
