--- a/configs/training/train_stratified_smoke/split_1_1.yaml
+++ b/configs/training/train_stratified_smoke/split_1_1.yaml
@@ -5,6 +5,12 @@ val_file: val_split_1_1.csv
 # TRAINING SETTINGS
 batch_size: 10
 num_workers: 0
+epochs: 5
+lr: 0.003000
+weight_decay: 0.000010
 
-# SAVE, LOAD AND DISPLAY INFORMATION
-epochs: 1
+# TESTING SETTINGS
+threshold: 0.500000
+
+# DEVICE CONFIGS
+device_count: 1
