--- a/.gitignore
+++ b/.gitignore
@@ -4,49 +4,39 @@ __pycache__/
 **/__pycache__/
 **/.idea/
 
-# Ignore the whole Physionet2021 dataset and its preprocessed version
-data/physionet_data/
-data/physionet_preprocessed/
+# Ignore everything in the data directory except smoke data and related csv files
+data/*
+!data/split_csvs/*
+#!data/smoke_data/
+#!data/split_csvs/stratified_smoke/test_split_1.csv
+#!data/split_csvs/stratified_smoke/train_split_1_1.csv
+!data/split_csvs/stratified_smoke/train_split_1_2.csv
+!data/split_csvs/stratified_smoke/train_split_1_3.csv
+!data/split_csvs/stratified_smoke/train_split_1_4.csv
+!data/split_csvs/stratified_smoke/val_split_1_1.csv 
+!data/split_csvs/stratified_smoke/val_split_1_2.csv 
+!data/split_csvs/stratified_smoke/val_split_1_3.csv 
+!data/split_csvs/stratified_smoke/val_split_1_4.csv 
 
-# Ignore the preprocessed smoke data too
-data/physionet_preprocessed_smoke/
+# We also need the weights file for PhysioNet 2021 metric
+!data/physionet2021_weights.csv
 
-# Ignore the tar.gz files of Physionet2021 data
+# Ignore the tar.gz files if loaded in the notebooks directory
 notebooks/*.tar.gz
 
 # Ignore all other configuration yaml files except spesific ones for smoke testing
 configs/*
 !configs/predicting/predict_smoke.yaml
-!configs/predicting/predict_DBwise_smoke/split_1.yaml
-!configs/predicting/predict_DBwise_smoke/split_2.yaml
-!configs/predicting/predict_DBwise_smoke/split_3.yaml
-!configs/predicting/predict_DBwise_smoke/split_4.yaml
-!configs/predicting/predict_stratifiede_smoke/split_1_1.yaml
-!configs/predicting/predict_stratifiede_smoke/split_1_2.yaml
-!configs/predicting/predict_stratifiede_smoke/split_1_3.yaml
-!configs/predicting/predict_stratifiede_smoke/split_1_4.yaml
+!configs/predicting/predict_stratified_smoke/split_1_1.yaml
+!configs/predicting/predict_stratified_smoke/split_1_2.yaml
+!configs/predicting/predict_stratified_smoke/split_1_3.yaml
+!configs/predicting/predict_stratified_smoke/split_1_4.yaml
 
-!configs/testing/train_smoke.yaml
-!configs/training/train_DBwise_smoke/split_1.yaml
-!configs/training/train_DBwise_smoke/split_2.yaml
-!configs/training/train_DBwise_smoke/split_3.yaml
-!configs/training/train_DBwise_smoke/split_4.yaml
-!configs/training/train_stratifiede_smoke/split_1_1.yaml
-!configs/training/traint_stratifiede_smoke/split_1_2.yaml
-!configs/training/train_stratifiede_smoke/split_1_3.yaml
-!configs/training/train_stratifiede_smoke/split_1_4.yaml
-
-# Ignore all other data csv files except spesific ones for smoke testing
-data/split_csvs/*
-!data/split_csvs/physionet_stratified_smoke/test_split_1.csv
-!data/split_csvs/physionet_stratified_smoke/train_split_1_1.csv
-!data/split_csvs/physionet_stratified_smoke/train_split_1_2.csv
-!data/split_csvs/physionet_stratified_smoke/train_split_1_3.csv
-!data/split_csvs/physionet_stratified_smoke/train_split_1_4.csv
-!data/split_csvs/physionet_stratified_smoke/val_split_1_1.csv 
-!data/split_csvs/physionet_stratified_smoke/val_split_1_2.csv 
-!data/split_csvs/physionet_stratified_smoke/val_split_1_3.csv 
-!data/split_csvs/physionet_stratified_smoke/val_split_1_4.csv 
+!configs/training/train_smoke.yaml
+!configs/training/train_stratified_smoke/split_1_1.yaml
+!configs/training/train_stratified_smoke/split_1_2.yaml
+!configs/training/train_stratified_smoke/split_1_3.yaml
+!configs/training/train_stratified_smoke/split_1_4.yaml
 
 # Ignore the experiments directory
 experiments/*
