label mapping added

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ __pycache__/
 
 # Ignore everything in the data directory except smoke data and related csv files
 data/*
+!data/*.csv
 !data/smoke_data/
 !data/split_csvs/stratified_smoke/test_split_1.csv
 !data/split_csvs/stratified_smoke/train_split_1_1.csv
@@ -22,6 +23,7 @@ data/*
 
 # Ignore the tar.gz files if loaded in the notebooks directory
 notebooks/*.tar.gz
+notebooks/*.csv
 
 # Ignore all other configuration yaml files except spesific ones for smoke testing
 configs/*
