--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,9 @@ __pycache__/
 # Ignore everything in the data directory except smoke data and related csv files
 data/*
 !data/*.csv
+!data/*.npy
 !data/smoke_data/
+!data/features/smoke_features/*.csv
 !data/split_csvs/stratified_smoke/test_split_1.csv
 !data/split_csvs/stratified_smoke/train_split_1_1.csv
 !data/split_csvs/stratified_smoke/train_split_1_2.csv
